--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "materialize-css": "^1.0.0",
     "moment-timezone": "^0.5.46",
     "moongose": "^1.0.0",
     "react": "^18.3.1",
