--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.4.5",
     "materialize-css": "^1.0.0",
     "moment-timezone": "^0.5.46",
     "moongose": "^1.0.0",
@@ -14,6 +15,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "twilio": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
