--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "materialize-css": "^1.0.0",
     "moment-timezone": "^0.5.46",
     "moongose": "^1.0.0",
+    "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "twilio": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whatsapp-web.js": "^1.26.0"
   },
   "scripts": {
     "start": "react-scripts start",
