--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "materialize-css": "^1.0.0",
     "moment-timezone": "^0.5.46",
     "moongose": "^1.0.0",
+    "puppeteer": "^23.11.1",
+    "puppeteer-core": "^23.11.1",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
